--- a/TODO.txt
+++ b/TODO.txt
@@ -9,17 +9,8 @@ FUNCTIONAL UPDATES TO BE MADE !!ASAP!! :
         - Create a server action that creates the payroll with the payroll period dates and a starting 0 for the total amount
         - Once a payroll is manually created we can see it in the pending payroll table with empty payrollItems
         - It should be able to add departments or designations to the payroll immediately 
-    - Revamp the salary system
-        - Each designation should have their unique salaries for the people under that      Oct-12
-        - Could have a salary increase or decrease in a designation level           Oct-12
-        - Each time an employee is assigned to a designation,
-            its gross salary is its base salary added to the designation salary and it is for transparency only       Oct-12
-        - Each time an employee is switched to a new designation, a new salaryHistory is to be made with its previous details       Oct-12
-        - Could undo a salary increase for a department or designation          Oct-13
         - Add salary decrease with same functions as increase 
     - Add a isLeave field for timesheets
-    - Multiple people(or could be a specific designation) can be added a bonus
-        - MULTI SELECT FROM SHADCN!!!!!
     - Add optional workingdays (workable holidays with more rate)
     - Request early clock outs for those people who want to clock out early 
     - Edit Overtime, is now able to edit how many hours requested for overtime
@@ -32,5 +23,17 @@ FINISHED UPDATES:
     - Add Edit and Remove functionality to Holidays     Oct-10 5:39pm
     - Added Audit Logs table for users and superadmins          Oct-13 9:49pm
     - Added Remove Payroll and can safely remove payrolls without affecting the deductions and additional earnings 
+    - Multiple people(or could be a specific designation) can be added a bonus      Oct-18
+        - MULTI SELECT FROM SHADCN!!!!!
+    - Added Collapsible sidebar and breadcrumbs up top      Oct-19
+    - Revamp the salary system          Oct-19  4:03pm
+        - Each designation should have their unique salaries for the people under that      Oct-12
+        - Could have a salary increase or decrease in a designation level           Oct-12
+        - Each time an employee is assigned to a designation,
+            its gross salary is its base salary added to the designation salary and it is for transparency only       Oct-12
+        - Each time an employee is switched to a new designation, a new salaryHistory is to be made with its previous details       Oct-12
+        - Could undo a salary increase for a department or designation          Oct-13
+
+        
 ====================================================================================================================
     NOVEMBER 18 FINAL DEFENSE - 5 WEEKS LEFT potangina
