--- a/TODO.txt
+++ b/TODO.txt
@@ -14,8 +14,6 @@ FUNCTIONAL UPDATES TO BE MADE !!ASAP!! :
     - Add optional workingdays (workable holidays with more rate)
     - Request early clock outs for those people who want to clock out early 
     - Edit Overtime, is now able to edit how many hours requested for overtime
-    - Designations should have a rate on their own 
-    - Create an advance generation of timesheets for admins to have access to for their employees 
     - Ask for medical certificate if sick leave in the request leave 
 
 FINISHED UPDATES:
@@ -34,6 +32,9 @@ FINISHED UPDATES:
         - Each time an employee is switched to a new designation, a new salaryHistory is to be made with its previous details       Oct-12
         - Could undo a salary increase for a department or designation          Oct-13
     - Added Dynamic Government Contributions where it is editable       Oct-19 7:40pm
+    - Designations should have a rate on their own 
+    - Create an advance generation of timesheets for admins to have access to for their employees Oct-20 4:51pm
+        - is able to undo the advanced timesheets
         
 ====================================================================================================================
     NOVEMBER 18 FINAL DEFENSE - 5 WEEKS LEFT potangina
