--- a/TODO.txt
+++ b/TODO.txt
@@ -5,11 +5,8 @@ FUTURE UPDATES TO BE MADE:
     - Transactions for multi updates in my server actions
 
 FUNCTIONAL UPDATES TO BE MADE !!ASAP!! :
-    - Add manual generation of Payroll
-        - Create a server action that creates the payroll with the payroll period dates and a starting 0 for the total amount
-        - Once a payroll is manually created we can see it in the pending payroll table with empty payrollItems
-        - It should be able to add departments or designations to the payroll immediately 
-        - Add salary decrease with same functions as increase 
+
+    - Add salary decrease with same functions as increase 
     - Add a isLeave field for timesheets
     - Add optional workingdays (workable holidays with more rate)
     - Request early clock outs for those people who want to clock out early 
@@ -39,6 +36,10 @@ FINISHED UPDATES:
     - Create an advance generation of timesheets for admins to have access to for their employees Oct-20 4:51pm
         - is able to undo the advanced timesheets   Oct-20 9:47pm
     - Added Documents upload feature        Oct-20 11pm
+    - Add manual generation of Payroll      Oct-23 8:27pm
+        - Create a server action that creates the payroll with the payroll period dates and a starting 0 for the total amount
+        - Once a payroll is manually created we can see it in the pending payroll table with empty payrollItems
+        - It should be able to add departments or designations to the payroll immediately 
         
 ====================================================================================================================
     NOVEMBER 18 FINAL DEFENSE - 4 WEEKS LEFT yawa
