--- a/TODO.txt
+++ b/TODO.txt
@@ -40,6 +40,7 @@ FINISHED UPDATES:
         - Create a server action that creates the payroll with the payroll period dates and a starting 0 for the total amount
         - Once a payroll is manually created we can see it in the pending payroll table with empty payrollItems
         - It should be able to add departments or designations to the payroll immediately 
+    ====================PROGRESS REPORT ONEIL OCT 24=========================================
         
 ====================================================================================================================
     NOVEMBER 18 FINAL DEFENSE - 4 WEEKS LEFT yawa
