--- a/TODO.txt
+++ b/TODO.txt
@@ -13,7 +13,7 @@ FUNCTIONAL UPDATES TO BE MADE !!ASAP!! :
     - revamp profile details especially the edit also probably the design too, and also admins should be able to edit the profile details
     - double check the calculations
     - add remove employee functionality
-    - 
+    - add a password display page for the day
 
 FINISHED UPDATES:
     - fix the profile picture not updating      Oct-10 2:15pm
@@ -44,6 +44,7 @@ FINISHED UPDATES:
     - Edit Overtime, is now able to edit how many hours requested for overtime
     ====================PROGRESS REPORT ONEIL OCT 24=========================================
     - add more transparency to the payslip pdf      Oct 25
+    - added allowances          Oct 29
         
 ====================================================================================================================
     NOVEMBER 18 FINAL DEFENSE - 4 WEEKS LEFT 
