--- a/TODO.txt
+++ b/TODO.txt
@@ -45,6 +45,7 @@ FINISHED UPDATES:
     ====================PROGRESS REPORT ONEIL OCT 24=========================================
     - add more transparency to the payslip pdf      Oct 25
     - added allowances          Oct 29
+    - added a payroll dashboard
         
 ====================================================================================================================
     NOVEMBER 18 FINAL DEFENSE - 4 WEEKS LEFT 
