added documents to leave requests

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,10 +8,13 @@ FUNCTIONAL UPDATES TO BE MADE !!ASAP!! :
 
     - Add optional workingdays (workable holidays with more rate)
     - Request early clock outs for those people who want to clock out early 
-    - Ask for medical certificate if sick leave in the request leave 
     - revamp profile details especially the edit also probably the design too, and also admins should be able to edit the profile details
     - double check the calculations
     - add remove employee functionality
+    - can edit user roles 
+    - solve the jobtitle problem
+    - revamp the select users data
+
     
 FINISHED UPDATES:
     - fix the profile picture not updating      Oct-10 2:15pm
@@ -47,6 +50,8 @@ FINISHED UPDATES:
     - Add salary decrease with same functions as increase   Oct 29
     - add a password display page for the day           Oct 30 11:25am
     - add absences in payslip       Oct 31 12:50pm
+    - can edit designation salary       Nov 1 2pm
+    - Ask for medical certificate if sick leave in the request leave        Nov 1 6:31pm
         
 ====================================================================================================================
-    NOVEMBER 18 FINAL DEFENSE - 4 WEEKS LEFT 
+    NOVEMBER 18 FINAL DEFENSE - 2 WEEKS LEFT 
