added special working days

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,12 +6,10 @@ FUTURE UPDATES TO BE MADE:
 
 FUNCTIONAL UPDATES TO BE MADE !!ASAP!! :
 
-    - Add optional workingdays (workable holidays with more rate)
     - Request early clock outs for those people who want to clock out early 
     - revamp profile details especially the edit also probably the design too, and also admins should be able to edit the profile details
     - double check the calculations
     - add remove employee functionality
-    - can edit user roles 
     - solve the jobtitle problem
 
     
@@ -52,6 +50,8 @@ FINISHED UPDATES:
     - can edit designation salary       Nov 1 2pm
     - Ask for medical certificate if sick leave in the request leave        Nov 1 6:31pm
     - revamp the select users data for editing department and designations      Nov 2 12:04am
+    - can edit user roles       Nov 2 2pm 
+    - Add optional workingdays (workable holidays with more rate)       Nov 2 4pm
         
 ====================================================================================================================
     NOVEMBER 18 FINAL DEFENSE - 2 WEEKS LEFT 
